add signin and signout ui, also add liveblock and design types of upcoming variables

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@liveblocks/client": "^2.18.3",
+    "@liveblocks/react": "^2.18.3",
+    "@liveblocks/react-ui": "^2.18.3",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/bcryptjs": "^2.4.6",
