--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@liveblocks/client": "^2.18.3",
+    "@liveblocks/node": "^2.18.3",
     "@liveblocks/react": "^2.18.3",
     "@liveblocks/react-ui": "^2.18.3",
     "@prisma/client": "^5.14.0",
